# tomodrgn

./: .buildinfo  .gitignore  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  versions.txt
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: index.doctree
.doctrees/command_usage/: analyze.doctree  analyze_volumes.doctree  backproject_voxel.doctree  cleanup.doctree  convergence_nn.doctree  convergence_vae.doctree  downsample.doctree  eval_images.doctree  eval_vol.doctree  filter_star.doctree  graph_traversal.doctree  index.doctree  pc_traversal.doctree  subtomo2chimerax.doctree  train_nn.doctree  train_vae.doctree  view_config.doctree
.doctrees/overview/: background.doctree  build_documentation.doctree  changelog.doctree  index.doctree  installation.doctree  run_tests.doctree
.doctrees/tutorials/: analyze_structural_heterogeneity.doctree  external_iterative_processing.doctree  index.doctree  isolate_particle_subsets.doctree  learn_structural_heterogeneity.doctree  um_cryoet_workshop_2024.doctree  upstream_preprocessing.doctree  validate_homogeneous_reconstruction.doctree  visualize_spatially_contextualized_heterogeneity.doctree
.github/workflows/: build_and_deploy_docs.yml
_modules/: index.html
_modules/tomodrgn/: analysis.html  beta_schedule.html  config.html  convergence.html  ctf.html  dataset.html  dose.html  fft.html  lattice.html  lie_tools.html  losses.html  models.html  mrc.html  pose.html  set_transformer.html  so3_grid.html  starfile.html  utils.html
_sources/api/: index.rst.txt
_sources/command_usage/: analyze_volumes.rst.txt  convergence_nn.rst.txt  index.rst.txt  subtomo2chimerax.rst.txt
_sources/overview/: build_documentation.rst.txt  changelog.rst.txt
_sources/tutorials/: analyze_structural_heterogeneity.rst.txt  index.rst.txt  isolate_particle_subsets.rst.txt
_static/: documentation_options.js
api/: index.html
api/_autosummary/: tomodrgn.analysis.cluster_gmm.html  tomodrgn.analysis.cluster_kmeans.html  tomodrgn.analysis.combine_ind.html  tomodrgn.analysis.convert_angstroms_to_voxels.html  tomodrgn.analysis.convert_original_indices.html  tomodrgn.analysis.get_colors_chimerax.html  (+255 more)
command_usage/: analyze.html  analyze_volumes.html  backproject_voxel.html  cleanup.html  convergence_nn.html  convergence_vae.html  downsample.html  eval_images.html  eval_vol.html  filter_star.html  graph_traversal.html  index.html  pc_traversal.html  subtomo2chimerax.html  train_nn.html  train_vae.html  view_config.html
cryodrgn/: __main__.py  analysis.py  dataset.py  dose.py  models.py  starfile.py  utils.py
docs/: jupyter_notebook_interactive_viewer.md
env/: env_conda_explicit_linux64x86.txt  env_conda_export.yml  env_pip_freeze_linux64x86.txt
overview/: background.html  build_documentation.html  changelog.html  index.html  installation.html  run_tests.html
testing/: commandtest.py  commandtest_warptools.py  conftest.py  quicktest.py  quicktest.sh  testing_module.py  unittest.py  unittest.sh
tomodrgn/: __init__.py  __main__.py  analysis.py  beta_schedule.py  config.py  convergence.py  ctf.py  dataset.py  dose.py  fft.py  lattice.py  lie_tools.py  losses.py  models.py  mrc.py  pose.py  set_transformer.py  so3_grid.py  starfile.py  utils.py
tutorials/: analyze_structural_heterogeneity.html  external_iterative_processing.html  index.html  isolate_particle_subsets.html  learn_structural_heterogeneity.html  um_cryoet_workshop_2024.html  upstream_preprocessing.html  validate_homogeneous_reconstruction.html  visualize_spatially_contextualized_heterogeneity.html
utils/: acn_mask.py  add_psize.py  filter_ctf.py  filter_mrcs.py  filter_star_ts.py  flip_hand.py  fsc_during_training.py  fsc_intercluster.py  invert_contrast.py  merge_poses.py  phase_flip.py  project3d.py  project3dvol.py  translate_stack.py  view_header.py  view_stack.py  write_TSstarfile.py  write_starfile.py
(+705 files in other folders)
